--- a/package.json
+++ b/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "firebase": "^12.8.0",
     "framer-motion": "^12.31.0",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-intl": "^4.8.2",
     "next-themes": "^0.4.6",
     "papaparse": "^5.5.3",
+    "qrcode.react": "^4.2.0",
+    "qrious": "^4.0.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "react-qr-code": "^2.0.18"
+    "react-qr-code": "^2.0.18",
+    "react-to-print": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
